[gd_scene load_steps=2 format=3 uid="uid://dxtnpauscjb5m"]

[ext_resource type="Script" uid="uid://df5dspf78bty7" path="res://scene/death.gd" id="1_iucu5"]

[node name="DeathMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_iucu5")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -40.0
offset_right = 1749.0
offset_bottom = 890.0
color = Color(0.136826, 0.136826, 0.136826, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 0
offset_left = 12.0
offset_top = -126.0
offset_right = 1721.0
offset_bottom = 739.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="LblTitle" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 150
text = "Game Over"

[node name="LblReason" type="Label" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="BtnRestart" type="Button" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "Restart"

[node name="BtnMainMenu" type="Button" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "Manu"
